findPixelRoute now more efficient